--- a/views/accountingReports/_dataTables.ejs
+++ b/views/accountingReports/_dataTables.ejs
@@ -107,7 +107,7 @@
                     <tbody>
                         <tr id="templateRow" data-id="$id$">
                             <td name="mainEntity.typeOf">
-                                $mainEntity.typeOf$
+                                <span class="badge badge-light">$mainEntity.typeOf$</span>
                             </td>
                             <td name="mainEntity.object.0.paymentMethod.totalPaymentDue.value__mainEntity.object.0.paymentMethod.totalPaymentDue.currency">
                                 $mainEntity.object.0.paymentMethod.totalPaymentDue.value$<br>$mainEntity.object.0.paymentMethod.totalPaymentDue.currency$
@@ -116,13 +116,13 @@
                                 $mainEntity.object.0.paymentMethod.paymentMethodId$
                             </td>
                             <td name="mainEntity.object.0.paymentMethod.typeOf">
-                                $mainEntity.object.0.paymentMethod.typeOf$
+                                <span class="badge badge-light">$mainEntity.object.0.paymentMethod.typeOf$</span>
                             </td>
                             <td name="mainEntity.startDate|date:YY-MM-DD HH:mm:ssZ">
                                 $mainEntity.startDate$
                             </td>
                             <td name="itemTypeStr">
-                                $itemTypeStr$
+                                <span class="badge badge-light">$itemTypeStr$</span>
                             </td>
                             <td name="isPartOf.mainEntity.orderNumber">
                                 $isPartOf.mainEntity.orderNumber$
