- 所有権検索を拡張 - 承認検索を拡張

--- a/views/authorizations/_dataTables.ejs
+++ b/views/authorizations/_dataTables.ejs
@@ -38,6 +38,13 @@
                             <input class="form-control" placeholder="対象タイプ" name="object[typeOf]"
                                 id="object[typeOf]" />
                         </div>
+                        <div class="form-group bmd-form-group col-md-2">
+                            <label for="code" class="bmd-label-static">
+                                対象ID
+                            </label>
+                            <input class="form-control" placeholder="対象ID" name="object[id]"
+                                id="object[id]" />
+                        </div>
                     </div>
 
                     <div class="advanced collapse">
