--- a/views/ownershipInfos/_dataTables.ejs
+++ b/views/ownershipInfos/_dataTables.ejs
@@ -62,6 +62,13 @@
                             <input class="form-control" placeholder="所有物識別子" name="typeOfGood[identifier]"
                                 id="typeOfGood[identifier]" />
                         </div>
+                        <div class="form-group bmd-form-group col-md-2">
+                            <label for="typeOfGood[issuedThrough][id]" class="bmd-label-static">
+                                発行サービスID
+                            </label>
+                            <input class="form-control" placeholder="発行サービスID" name="typeOfGood[issuedThrough][id]"
+                                id="typeOfGood[issuedThrough][id]" />
+                        </div>
                     </div>
 
                     <div class="advanced collapse">
