- スタイル調整

--- a/views/creativeWorks/movie/form.ejs
+++ b/views/creativeWorks/movie/form.ejs
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card card-plain">
     <div class="card-body ">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
