--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -14,7 +14,7 @@ Aa-4
 
 <%- contentFor('body') %>
 
-<div class="card">
+<div class="card card-plain">
     <div class="card-body search">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
