--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,7 +4,7 @@
 
 <body>
     <div class="wrapper ">
-        <div class="sidebar" data-color="purple" data-background-color="black">
+        <div class="sidebar" data-color="purple" data-background-color="white">
             <!--
               Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
       
@@ -12,7 +12,7 @@
           -->
             <div class="logo">
                 <a href="/" class="simple-text logo-normal">
-                    CHEVRE Console
+                    Chevre Console
                 </a>
             </div>
 
