--- a/views/offerCatalogs/index.ejs
+++ b/views/offerCatalogs/index.ejs
@@ -13,7 +13,7 @@ OC-01
 
 <% /* フォーム */ %>
 
-<div class="card">
+<div class="card card-plain">
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
