--- a/views/paymentServices/index.ejs
+++ b/views/paymentServices/index.ejs
@@ -12,7 +12,7 @@ PR-00
 
 <%- contentFor('body') %>
 
-<div class="card">
+<div class="card card-plain">
     <div class="card-body search searchProducts">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
