--- a/views/transactions/reserve/start.ejs
+++ b/views/transactions/reserve/start.ejs
@@ -8,7 +8,7 @@ RT-00
 <script src="/js/transactions/reserve.js"></script>
 
 <%- contentFor('body') %>
-<div class="card">
+<div class="card card-plain">
     <!-- <div class="card-header">
         <h3 class="card-title">Quick Example</h3>
     </div> -->
