--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,8 @@ html, body {
 
 body {
   text-size-adjust: 100%;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  background-color: white; }
 
 .pointer {
   cursor: pointer; }
@@ -196,7 +197,8 @@ body {
   font-size: inherit; }
 
 .table tbody tr td, .table tbody tr th, .table tfoot tr td, .table tfoot tr th, .table thead tr td, .table thead tr th {
-  padding: 6px 4px; }
+  padding: .3rem;
+  vertical-align: top; }
 
 .card {
   margin-top: 0; }
@@ -212,6 +214,46 @@ body {
 
 .nav-pills.nav-pills-dark .nav-item .nav-link.active, .nav-pills.nav-pills-dark .nav-item .nav-link.active:focus, .nav-pills.nav-pills-dark .nav-item .nav-link.active:hover {
   background-color: #999; }
+
+.sidebar .logo {
+  padding: 10px 0; }
+
+.sidebar .logo .simple-text {
+  font-size: 16px; }
+
+.sidebar .nav {
+  margin-top: 5px; }
+
+.sidebar .nav i {
+  font-size: 24px;
+  margin-right: 15px;
+  line-height: 20px;
+  width: 30px; }
+
+.sidebar .nav p {
+  line-height: 20px;
+  font-size: 14px; }
+
+.sidebar .nav .caret {
+  margin-top: 8px;
+  right: 6px; }
+
+.sidebar .nav li .dropdown-menu a, .sidebar .nav li a {
+  margin: 0px 5px 0;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding: 10px 15px; }
+
+.sidebar .nav li:first-child > a {
+  margin: 0 5px; }
+
+.navbar.navbar-transparent {
+  padding-top: 5px;
+  padding-bottom: 5px; }
+
+.main-panel > .content {
+  margin-top: 60px;
+  padding: 15px 15px; }
 
 .scheduler {
   margin: 0 auto;
