--- a/views/customers/index.ejs
+++ b/views/customers/index.ejs
@@ -12,7 +12,7 @@ CU-01
 <%- contentFor('body') %>
 <% /* フォーム */ %>
 
-<div class="card">
+<div class="card card-plain">
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
