--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -9,7 +9,7 @@
             </div>
 
             <div class="modal-body">
-                <div class="card mb-0">
+                <div class="card card-plain mb-0">
                     <div class="card-body">
                         <form>
                             <div class="form-row">
