--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -8,7 +8,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="card mb-0">
+                <div class="card card-plain mb-0">
                     <div class="card-body">
                         <form>
                             <div class="form-row">
