--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -12,7 +12,7 @@ PS-02
 
 <%- contentFor('body') %>
 
-<div class="card">
+<div class="card card-plain">
     <div class="card-body search searchPriceSpecification">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
