--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -12,7 +12,7 @@ Aa-11
 
 <%- contentFor('body') %>
 
-<div class="card">
+<div class="card card-plain">
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
