--- a/views/transactions/reserve/confirm.ejs
+++ b/views/transactions/reserve/confirm.ejs
@@ -8,7 +8,7 @@ RT-00
 
 <%- contentFor('body') %>
 
-<div class="card">
+<div class="card card-plain">
     <div class="card-header">
         <h3 class="card-title">
             下記内容で予約取引を実行しようとしています...
