- アクション検索条件拡張

--- a/views/actions/_dataTables.ejs
+++ b/views/actions/_dataTables.ejs
@@ -57,24 +57,137 @@
                         </div>
                     </div>
 
-                    <div class="form-row">
-                        <div class="form-group bmd-form-group col-md-2">
-                            <label for="object[reservationFor][id][$eq]" class="bmd-label-static">
-                                object.reservationFor.id
-                            </label>
-                            <input type="text" class="form-control" name="object[reservationFor][id][$eq]"
-                                id="object[reservationFor][id][$eq]" placeholder="object.reservationFor.id" />
-                        </div>
-                        <div class="form-group bmd-form-group col-md-2">
-                            <label for="location[identifier][$eq]" class="bmd-label-static">
-                                location.identifier
-                            </label>
-                            <input type="text" class="form-control" name="location[identifier][$eq]"
-                                id="location[identifier][$eq]" placeholder="location.identifier" />
-                        </div>
-                    </div>
-
                     <div class="advanced collapse">
+                        <div class="form-row">
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="agent[typeOf][$eq]" class="bmd-label-static">
+                                    agent.typeOf
+                                </label>
+                                <input type="text" class="form-control" name="agent[typeOf][$eq]"
+                                    id="agent[typeOf][$eq]" placeholder="agent.typeOf" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="agent[id][$eq]" class="bmd-label-static">
+                                    agent.id
+                                </label>
+                                <input type="text" class="form-control" name="agent[id][$eq]"
+                                    id="agent[id][$eq]" placeholder="agent.id" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="location[identifier][$eq]" class="bmd-label-static">
+                                    location.identifier
+                                </label>
+                                <input type="text" class="form-control" name="location[identifier][$eq]"
+                                    id="location[identifier][$eq]" placeholder="location.identifier" />
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="object[typeOf][$eq]" class="bmd-label-static">
+                                    object.typeOf
+                                </label>
+                                <input type="text" class="form-control" name="object[typeOf][$eq]"
+                                    id="object[typeOf][$eq]" placeholder="object.typeOf" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="object[id][$eq]" class="bmd-label-static">
+                                    object.id
+                                </label>
+                                <input type="text" class="form-control" name="object[id][$eq]"
+                                    id="object[id][$eq]" placeholder="object.id" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="object[orderNumber][$eq]" class="bmd-label-static">
+                                    object.orderNumber
+                                </label>
+                                <input type="text" class="form-control" name="object[orderNumber][$eq]"
+                                    id="object[orderNumber][$eq]" placeholder="object.orderNumber" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="object[reservationFor][id][$eq]" class="bmd-label-static">
+                                    object.reservationFor.id
+                                </label>
+                                <input type="text" class="form-control" name="object[reservationFor][id][$eq]"
+                                    id="object[reservationFor][id][$eq]" placeholder="object.reservationFor.id" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="object[event][id][$eq]" class="bmd-label-static">
+                                    object.event.id
+                                </label>
+                                <input type="text" class="form-control" name="object[event][id][$eq]"
+                                    id="object[event][id][$eq]" placeholder="object.event.id" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="object[acceptedOffer][ticketedSeat][seatNumber][$eq]" class="bmd-label-static">
+                                    object.acceptedOffer.ticketedSeat.seatNumber
+                                </label>
+                                <input type="text" class="form-control" name="object[acceptedOffer][ticketedSeat][seatNumber][$eq]"
+                                    id="object[acceptedOffer][ticketedSeat][seatNumber][$eq]" placeholder="object.acceptedOffer.ticketedSeat.seatNumber" />
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="purpose[typeOf][$eq]" class="bmd-label-static">
+                                    purpose.typeOf
+                                </label>
+                                <input type="text" class="form-control" name="purpose[typeOf][$eq]"
+                                    id="purpose[typeOf][$eq]" placeholder="purpose.typeOf" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="purpose[id][$eq]" class="bmd-label-static">
+                                    purpose.id
+                                </label>
+                                <input type="text" class="form-control" name="purpose[id][$eq]"
+                                    id="purpose[id][$eq]" placeholder="purpose.id" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="purpose[orderNumber][$eq]" class="bmd-label-static">
+                                    purpose.orderNumber
+                                </label>
+                                <input type="text" class="form-control" name="purpose[orderNumber][$eq]"
+                                    id="purpose[orderNumber][$eq]" placeholder="purpose.orderNumber" />
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="result[typeOf][$eq]" class="bmd-label-static">
+                                    result.typeOf
+                                </label>
+                                <input type="text" class="form-control" name="result[typeOf][$eq]"
+                                    id="result[typeOf][$eq]" placeholder="result.typeOf" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="result[id][$eq]" class="bmd-label-static">
+                                    result.id
+                                </label>
+                                <input type="text" class="form-control" name="result[id][$eq]"
+                                    id="result[id][$eq]" placeholder="result.id" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="result[orderNumber][$eq]" class="bmd-label-static">
+                                    result.orderNumber
+                                </label>
+                                <input type="text" class="form-control" name="result[orderNumber][$eq]"
+                                    id="result[orderNumber][$eq]" placeholder="result.orderNumber" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="fromLocation[accountNumber][$eq]" class="bmd-label-static">
+                                    fromLocation.accountNumber
+                                </label>
+                                <input type="text" class="form-control" name="fromLocation[accountNumber][$eq]"
+                                    id="fromLocation[accountNumber][$eq]" placeholder="fromLocation.accountNumber" />
+                            </div>
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="toLocation[accountNumber][$eq]" class="bmd-label-static">
+                                    toLocation.accountNumber
+                                </label>
+                                <input type="text" class="form-control" name="toLocation[accountNumber][$eq]"
+                                    id="toLocation[accountNumber][$eq]" placeholder="toLocation.accountNumber" />
+                            </div>
+                        </div>
                     </div>
                 </form>
             </div>
