--- a/views/orders/_dataTables.ejs
+++ b/views/orders/_dataTables.ejs
@@ -279,8 +279,8 @@
                             <td name="orderDate|date:YY-MM-DD HH:mm:ssZ">
                                 $orderDate$
                             </td>
-                            <td name="orderStatus">
-                                <span class="badge badge-light">$orderStatus$</span>
+                            <td name="orderStatus__orderStatus">
+                                <span class="badge badge-light $orderStatus$">$orderStatus$</span>
                             </td>
                             <td name="confirmationNumber">
                                 $confirmationNumber$
