--- a/views/actions/_dataTables.ejs
+++ b/views/actions/_dataTables.ejs
@@ -222,8 +222,8 @@
                                     表示
                                 </a>
                             </td>
-                            <td class="actionStatus" name="actionStatus">
-                                $actionStatus$
+                            <td class="actionStatus" name="actionStatus__actionStatus">
+                                <span class="badge badge-light $actionStatus$">$actionStatus$</span>
                             </td>
                             <td name="startDate|date:YY-MM-DD HH:mm:ssZ">
                                 $startDate$
