- オファーフォーム調整

--- a/views/offers/form.ejs
+++ b/views/offers/form.ejs
@@ -64,11 +64,10 @@
                             アイテム<span class="text-danger">＊</span>
                         </label>
                         <select class="form-control" name="itemOffered[typeOf]">
-                            <option value="" disabled selected>選択してください</option>
                             <% productTypes.forEach((productType) => { %>
                             <option value="<%= productType.codeValue %>"
                                 <% if (forms.itemOffered!==undefined && forms.itemOffered.typeOf === productType.codeValue) { %>
-                                selected<% } %>><%= productType.name %></option>
+                                selected<% } else { %> disabled<% } %>><%= productType.name %></option>
                             <% }) %>
                         </select>
                         <% if (errors && errors['itemOffered[typeOf]']) { %>
