--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,6 +30,8 @@ HO-01
 
                 </div>
             </div>
+
+            <% if (roleNames.includes('owner')) { %>
             <div class="card card-product">
                 <div class="card-body">
                     <h4 class="card-title">
@@ -46,6 +48,7 @@ HO-01
                     </div>
                 </div>
             </div>
+            <% } %>
         </div>
 
         <div class="col-md-4">
@@ -133,6 +136,7 @@ HO-01
                 </div>
             </div>
 
+            <% if (roleNames.includes('owner')) { %>
             <div class="card card-product errorReporting">
                 <div class="card-body">
                     <h4 class="card-title">
@@ -146,6 +150,7 @@ HO-01
                     </div>
                 </div>
             </div>
+            <% } %>
 
             <!-- <div class="card card-product">
                 <div class="card-body">
